force-app/main/default/objects/ProjectTask__c/fields/Assignment_Count__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Count__c</fullName>
    <label>Assignment Count</label>
    <summaryForeignKey>Assignment__c.Task__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>