force-app/main/default/objects/ProjectTask__c/fields/BaselineEndDate__c.field-meta.xml
<CustomField>
    <fullName>BaselineEndDate__c</fullName>
    <label>Baseline End Date</label>
    <type>DateTime</type>
</CustomField>