force-app/main/default/objects/ProjectTask__c/fields/BaselinePercentDone__c.field-meta.xml
<CustomField>
    <fullName>BaselinePercentDone__c</fullName>
    <label>Baseline Percent Done</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>