force-app/main/default/objects/ProjectTask__c/fields/BaselineStartDate__c.field-meta.xml
<CustomField>
    <fullName>BaselineStartDate__c</fullName>
    <label>Baseline Start Date</label>
    <type>DateTime</type>
</CustomField>