force-app/main/default/objects/ProjectTask__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <label>Calendar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>