force-app/main/default/objects/ProjectTask__c/fields/ConstraintDate__c.field-meta.xml
<CustomField>
    <fullName>ConstraintDate__c</fullName>
    <label>Constraint Date</label>
    <type>DateTime</type>
</CustomField>