force-app/main/default/objects/ProjectTask__c/fields/ConstraintType__c.field-meta.xml
<CustomField>
    <fullName>ConstraintType__c</fullName>
    <label>Constraint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Soon As Possible</fullName>
            </value>
            <value>
                <fullName>As Late As Possible</fullName>
            </value>
            <value>
                <fullName>Must Start On</fullName>
            </value>
            <value>
                <fullName>Must Finish On</fullName>
            </value>
            <value>
                <fullName>Start No Earlier Than</fullName>
            </value>
            <value>
                <fullName>Finish No Later Than</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>