force-app/main/default/objects/ProjectTask__c/fields/EffortUnit__c.field-meta.xml
<CustomField>
    <fullName>EffortUnit__c</fullName>
    <label>Effort Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Story Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>