force-app/main/default/objects/ProjectTask__c/fields/IsLeaf__c.field-meta.xml
<CustomField>
    <fullName>IsLeaf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLeaf</label>
    <type>Checkbox</type>
</CustomField>