force-app/main/default/objects/ProjectTask__c/fields/ManuallyScheduled__c.field-meta.xml
<CustomField>
    <fullName>ManuallyScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Scheduled</label>
    <type>Checkbox</type>
</CustomField>