force-app/main/default/objects/ProjectTask__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Task</label>
    <referenceTo>ProjectTask__c</referenceTo>
    <relationshipLabel>Child Tasks</relationshipLabel>
    <relationshipName>ChildTasks</relationshipName>
    <type>Lookup</type>
</CustomField>