force-app/main/default/objects/ProjectTask__c/fields/PercentDone__c.field-meta.xml
<CustomField>
    <fullName>PercentDone__c</fullName>
    <label>Percent Done</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>