force-app/main/default/objects/ProjectTask__c/fields/PhantomId__c.field-meta.xml
<CustomField>
    <fullName>PhantomId__c</fullName>
    <label>PhantomId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>