force-app/main/default/objects/ProjectTask__c/fields/Rollup__c.field-meta.xml
<CustomField>
    <fullName>Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollup</label>
    <type>Checkbox</type>
</CustomField>