force-app/main/default/objects/ProjectTask__c/fields/SchedulingMode__c.field-meta.xml
<CustomField>
    <fullName>SchedulingMode__c</fullName>
    <label>Scheduling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>