force-app/main/default/objects/ProjectTask__c/fields/TaskEndDate__c.field-meta.xml
<CustomField>
    <fullName>TaskEndDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>