force-app/main/default/objects/ProjectTask__c/fields/TaskStartDate__c.field-meta.xml
<CustomField>
    <fullName>TaskStartDate__c</fullName>
    <label>Task Start Date</label>
    <type>Date</type>
</CustomField>