force-app/main/default/objects/ProjectTask__c/fields/Total_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Worked__c</fullName>
    <label>Total Worked</label>
    <summarizedField>TaskSegment__c.Duration__c</summarizedField>
    <summaryForeignKey>TaskSegment__c.Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>