force-app/main/default/objects/ProjectTask__c/fields/TotalExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalExpense__c</fullName>
    <label>Total Expense</label>
    <summarizedField>Expense__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense__c.Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>