force-app/main/default/objects/ProjectTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>TaskStartDate__c</columns>
    <columns>Assignment_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>